Fixed gallery, form, top menu alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,17 @@ font-family: 'Fredericka the Great', 'Courier New', Courier, monospace;
   
 }
 
+#photos {
+    clear: both;
+    line-height: 0;
+    column-count: 3;
+    column-gap: 0;
+}
+
+#photos > img {
+    width: 100%;
+}
+
 /*similar to the header, this one aligns at the bottom*/
 .footer {
 
@@ -95,6 +106,7 @@ font-family: 'Fredericka the Great', 'Courier New', Courier, monospace;
     justify-content: center;
     border-top:5px solid #969696;
 
+
 }
 
 .footer li {
@@ -102,7 +114,7 @@ font-family: 'Fredericka the Great', 'Courier New', Courier, monospace;
     list-style-type: none;
     margin-right: 10px;
     padding-top: 10px;
-    display:flex;
+    display:inline-block;
 
 }
 
@@ -144,6 +156,43 @@ font-family: 'Fredericka the Great', 'Courier New', Courier, monospace;
     background-size:cover; 
     height:600px; 
     background-repeat:no-repeat;
+    font-weight: 600;
+
+    /*Special additions to space this section apart from header:*/
+    margin-top: 130px;
+    border-top: 2px solid rgba(85, 85, 85);
+    
+}
+
+.contact-bg > input {
+    width:100%;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+
+.contact-bg > textarea {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  background-color: rgba(85, 85, 85);
+  resize: none;
+
+}
+
+.contact-bg > input[type=button], input[type=submit], input[type=reset]{
+
+    background-color: #747474;
+    color:#fafafa;
+    font-weight: 300;
+    font-family: 'Special Elite', 'Courier New', Courier, monospace;
+
+    
+}
+
+.photos-bg{
+    background-color:#000000;
 
     /*Special additions to space this section apart from header:*/
     margin-top: 130px;
@@ -215,13 +264,15 @@ font-family: 'Fredericka the Great', 'Courier New', Courier, monospace;
 
     }
 
-    #menu img{
-
-        display: block;
-        margin-bottom: 20px;
-        margin-right: auto;
+    #menu img {
+        vertical-align: middle;
+        float:none;
+        padding: 10px;
+        display:flex;
+        justify-content: center;
+        align-items: center;
         margin-left: auto;
-
+        margin-right:auto;
     }
 
     #menu ul{
